--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link href="/assets/css/style.css" rel="stylesheet" />
-  <link href="/assets/css/colors-dark.css" rel="stylesheet" />
+  <link href="{{ site.baseurl }}/assets/css/style.css" rel="stylesheet" />
+  <link href="{{ site.baseurl }}/assets/css/colors-dark.css" rel="stylesheet" />
 
 </head>
 
@@ -33,11 +33,11 @@
     <div id="sidebar">
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archive</a></li>
-          <li><a href="/about">About</a></li>
+          <li><a href="{{ site.baseurl }}/">Home</a></li>
+          <li><a href="{{ site.baseurl }}/archives">Archive</a></li>
+          <li><a href="{{ site.baseurl }}/about">About</a></li>
           <li><a href="http://twitter.com/redwall_hp">Twitter</a></li>
-          <li><a href="/feed.xml">RSS Feed</a></li>
+          <li><a href="{{ site.baseurl }}/feed.xml">RSS Feed</a></li>
         </ul>
       </nav>
     </div>
@@ -61,7 +61,7 @@
 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script src="/assets/js/jquery.mobilemenu.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/jquery.mobilemenu.min.js"></script>
 
   <script>
     $(document).ready(function(){
