--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,11 @@
     <div id="sidebar">
       <nav>
         <ul>
-          <li><a href="{{ site.baseurl }}/">Home</a></li>
-          <li><a href="{{ site.baseurl }}/archives">Archive</a></li>
-          <li><a href="{{ site.baseurl }}/about">About</a></li>
+          <li><a href="{{ site.baseurl }}{{ post.url }}/">Home</a></li>
+          <li><a href="{{ site.baseurl }}{{ post.url }}/archives">Archive</a></li>
+          <li><a href="{{ site.baseurl }}{{ post.url }}/about">About</a></li>
           <li><a href="http://twitter.com/redwall_hp">Twitter</a></li>
-          <li><a href="{{ site.baseurl }}/feed.xml">RSS Feed</a></li>
+          <li><a href="{{ site.baseurl }}{{ post.url }}/feed.xml">RSS Feed</a></li>
         </ul>
       </nav>
     </div>
